@@ -78,15 +78,5 @@ test {
 	}
 }
 
-compileJava {
-    doFirst {
-        options.compilerArgs = [
-                '--module-path', classpath.asPath,
-                '--add-modules', 'javafx.controls,javafx.fxml,javafx.graphics'
-        ]
-        println options.compilerArgs
-    }
-
-}
 
 mainClassName = 'com.venn.Main'
